--- a/Prototype_Santander_BEDU_jalisco.ipynb
+++ b/Prototype_Santander_BEDU_jalisco.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Copia de Prototype-Santander-BEDU_jalisco.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -26,6 +27,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/zoegarm/Clasificacion-de-imagenes-de-satelite/blob/main/Prototype_Santander_BEDU_jalisco.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -89,7 +100,7 @@
       "source": [
         "!pip install rasterio"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,7 +142,7 @@
         "from matplotlib.colors import ListedColormap\n",
         "from rasterio.plot import show\n"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -156,7 +167,7 @@
         "# Visualizamos el path de los archivos\n",
         "Landsat_data"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -216,7 +227,7 @@
         "\n",
         "print(f\"La dimensión de nuestro array es:\\n {arr_img.shape[2]} bandas (o canales)\\n {arr_img.shape[0]} alto\\n {arr_img.shape[1]} ancho\")"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,7 +267,7 @@
         "    show(arr_img[:,:,i-1], cmap='Greys_r', ax=ax, title=f\"Banda {labels[i-1]}\")\n",
         "    plt.axis('off')"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -309,7 +320,7 @@
         "plt.title(\"Composición de color natural (RGB)\")\n",
         "plt.axis('off');"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -357,7 +368,7 @@
         "    ax.set_title(f\"Banda {labels[i-1]}\")\n",
         "    ax.set(xlabel=\"Cantidad\")"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -397,7 +408,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -446,7 +457,7 @@
         "print(f\"La nueva dimensión del array es {X_estan.shape}\")\n",
         "1328 * 643\n"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -519,7 +530,7 @@
         "    print(f\"PCA{i+1} = {pca.explained_variance_ratio_[i]}\")\n",
         "print(f\"El total de la varianza dentro de las componentes es:\\n {np.sum(pca.explained_variance_ratio_)}\")"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -564,7 +575,7 @@
         "    show(data_pca_reshape[:,:,i-1], cmap='Greys_r', ax=ax, title=f\"PCA {i}\")\n",
         "    plt.axis('off')"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -599,7 +610,7 @@
         "plt.title('Imagenes Landsat 8 reducción a 2 dimensiones',fontweight='bold')\n",
         "plt.show()"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -639,7 +650,7 @@
         "    kmeans.fit(data_pca)\n",
         "    inertia.append(kmeans.inertia_)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -682,7 +693,7 @@
         "plt.title('K-Means Inertia',fontweight='bold')\n",
         "plt.grid(True)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -730,7 +741,7 @@
         "\n",
         "clasificacion = kmeans.predict(data_pca)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -763,7 +774,7 @@
         "plt.colorbar()\n",
         "plt.axis('off');"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -789,7 +800,7 @@
         "\n",
         "y_data = clasificacion"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -831,7 +842,7 @@
         "                                  test_size=0.30, stratify = y_data.ravel(), random_state=50)\n",
         "print(f'Dimensiones X_train: {X_train.shape}\\nDimensión X_test: {X_test.shape}\\nDimensión y_train: {y_train.shape}\\nDimensión y_test:{y_test.shape}')"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -889,7 +900,7 @@
         "# Hacemos predicciones\n",
         "knn_pred = knn.predict(X_test)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -919,7 +930,7 @@
         "# Realizamos el reporte de clasificación\n",
         "print(classification_report(y_test, knn_pred))"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -963,7 +974,7 @@
         "plt.colorbar()\n",
         "plt.axis('off');"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1022,7 +1033,7 @@
         "# Predicción en los datos de prueba\n",
         "dtc_pred = dtc.predict(X_test)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1050,7 +1061,7 @@
         "# Realizamos el reporte de clasificación\n",
         "print(classification_report(y_test, dtc_pred))"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1094,7 +1105,7 @@
         "plt.colorbar()\n",
         "plt.axis('off');"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1153,7 +1164,7 @@
         "# Predicción en los datos de prueba\n",
         "rfc_pred = rfc.predict(X_test)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1181,7 +1192,7 @@
         "# Realizamos el reporte de clasificación\n",
         "print(classification_report(y_test, rfc_pred))"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1225,7 +1236,7 @@
         "plt.colorbar()\n",
         "plt.axis('off');"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1282,7 +1293,7 @@
         "# Predicción en los datos de prueba\n",
         "dtr_pred = dtr.predict(X_test)"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1310,7 +1321,7 @@
         "# Realizamos el reporte de clasificación\n",
         "print(classification_report(y_test, dtr_pred))"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1354,7 +1365,7 @@
         "plt.colorbar()\n",
         "plt.axis('off');"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1412,7 +1423,7 @@
         "# Predicción en los datos de prueba\n",
         "adtr_pred = adtr.predict(X_test)\n"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1440,7 +1451,7 @@
         "# Realizamos el reporte de clasificacion\n",
         "print(classification_report(y_test, adtr_pred))"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1484,7 +1495,7 @@
         "plt.colorbar()\n",
         "plt.axis('off');"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1546,7 +1557,7 @@
         "# Predicción en los datos de prueba\n",
         "ann_pred = ann.predict(X_test)"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1585,7 +1596,7 @@
         "# Realizamos el reporte de clasificación\n",
         "print(classification_report(y_test, ann_pred))"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1631,7 +1642,7 @@
         "plt.colorbar()\n",
         "plt.axis('off');"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1676,10 +1687,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "mwijVM03knIY",
-        "outputId": "1760ddfc-47da-4ac2-fff0-6b566ae9c3cc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1760ddfc-47da-4ac2-fff0-6b566ae9c3cc"
       },
       "source": [
         "%%time \n",
@@ -1706,7 +1717,7 @@
         "print(classification_report(y_test, prediccion))\n",
         "\n"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1737,11 +1748,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "3_VQg-21E-3Y",
-        "outputId": "9e7d1712-693a-461e-b2dc-f14389e5ca32",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 598
-        }
+        },
+        "outputId": "9e7d1712-693a-461e-b2dc-f14389e5ca32"
       },
       "source": [
         "%%time \n",
@@ -1753,7 +1764,7 @@
         "plt.colorbar()\n",
         "plt.axis('off');"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1782,10 +1793,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "jQ_e7rtkIsfk",
-        "outputId": "88c483cf-2943-4630-e02c-2f0497d95ce7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "88c483cf-2943-4630-e02c-2f0497d95ce7"
       },
       "source": [
         "%%time \n",
@@ -1806,7 +1817,7 @@
         "# Realizamos el reporte de clasificación\n",
         "print(classification_report(y_test, naiv_pred))"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1837,11 +1848,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "v8xgEbGDXd6C",
-        "outputId": "c9371118-5602-4bb5-9883-fd1c7c53133b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 632
-        }
+        },
+        "outputId": "c9371118-5602-4bb5-9883-fd1c7c53133b"
       },
       "source": [
         "%%time \n",
@@ -1853,7 +1864,7 @@
         "plt.colorbar()\n",
         "plt.axis('off');"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
