Update: exactitud y precisión error

--- a/Prototype_Santander_BEDU_jalisco.ipynb
+++ b/Prototype_Santander_BEDU_jalisco.ipynb
@@ -203,7 +203,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 841
+          "height": 394
         },
         "id": "CtQNV9ywSard",
         "outputId": "c8aedb30-16ec-4cd5-e01f-192a4e990f29"
@@ -954,23 +954,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5lO8Ks-TgYAK",
-        "outputId": "20367066-c9e4-4729-c721-28439b532ed2"
+        "outputId": "3b60804f-8ff5-49b9-e0a6-5139cd2a986d"
       },
       "source": [
-        "# Calculamos la precisión\n",
+        "# Calculamos la exactitud\n",
         "from sklearn.metrics import classification_report, accuracy_score\n",
         "\n",
-        "print(f\"Precisión: {accuracy_score(y_test, knn_pred)*100}\")\n",
+        "print(f\"Precisión PPV: {precision_score(y_test, knn_pred, average=None)*100}\")\n",
+        "print(f\"Exactitud ACC: {accuracy_score(y_test, knn_pred)*100:.3f}\")\n",
         "\n",
         "# Realizamos el reporte de clasificación\n",
         "print(classification_report(y_test, knn_pred))"
       ],
-      "execution_count": 21,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Precisión: 99.25635900879098\n",
+            "Precisión PPV: [99.56785273 98.6368429  99.6812206  97.99757282 99.54913996]\n",
+            "Exactitud ACC: 99.256\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "           0       1.00      1.00      1.00     17794\n",
@@ -1087,21 +1089,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XSepwAfqIQ2u",
-        "outputId": "d07da137-dbbc-41cf-b4d7-072e16a03e5a"
+        "outputId": "7220443c-fdff-4e15-e646-7d6f37180a2e"
       },
       "source": [
-        "# Calculamos la precisión\n",
-        "print(f\"Precisión: {accuracy_score(y_test, dtc_pred)*100}\")\n",
+        "# Calculamos la exactitud\n",
+        "print(f\"Exactitud: {accuracy_score(y_test, dtc_pred)*100:.3f}\")\n",
         "\n",
         "# Realizamos el reporte de clasificación\n",
         "print(classification_report(y_test, dtc_pred))"
       ],
-      "execution_count": 24,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Precisión: 98.15280358509126\n",
+            "Exactitud: 98.153\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "           0       1.00      1.00      1.00     17794\n",
@@ -1218,21 +1220,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jSpAPoADQ1Q9",
-        "outputId": "a1f87f82-72f8-460f-d41c-f08ecf8cd032"
+        "outputId": "9104b9a6-2a7e-43f0-d993-543b9d14f4b4"
       },
       "source": [
-        "# Calculamos la precisión\n",
-        "print(f\"Precisión: {accuracy_score(y_test, rfc_pred)*100}\")\n",
+        "# Calculamos la exactitud\n",
+        "print(f\"Exactitud: {accuracy_score(y_test, rfc_pred)*100:.3f}\")\n",
         "\n",
         "# Realizamos el reporte de clasificación\n",
         "print(classification_report(y_test, rfc_pred))"
       ],
-      "execution_count": 27,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Precisión: 99.27665787049327\n",
+            "Exactitud: 99.277\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "           0       1.00      1.00      1.00     17794\n",
@@ -1347,21 +1349,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UqjW-r4wkqK-",
-        "outputId": "12ffeb0e-26ca-42cd-d47b-c3ab36aff947"
+        "outputId": "f83ff406-fde4-4c95-810d-34d6e71d7e77"
       },
       "source": [
-        "# Calculamos la precisión\n",
-        "print(f\"Precisión: {accuracy_score(y_test, dtr_pred)*100}\")\n",
+        "# Calculamos la exactitud\n",
+        "print(f\"Exactitud: {accuracy_score(y_test, dtr_pred)*100:.3f}\")\n",
         "\n",
         "# Realizamos el reporte de clasificación\n",
         "print(classification_report(y_test, dtr_pred))"
       ],
-      "execution_count": 30,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Precisión: 98.20120856299674\n",
+            "Exactitud: 98.201\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "           0       1.00      1.00      1.00     17794\n",
@@ -1477,21 +1479,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "h3yFGp26lYky",
-        "outputId": "2b17862a-8831-4121-9dc5-8b77ec6cd808"
+        "outputId": "727f5780-9fdd-4827-a7b7-8369dd67d8f4"
       },
       "source": [
-        "# Calculamos la precisión\n",
-        "print(f\"Precisión: {accuracy_score(y_test, adtr_pred)*100}\")\n",
+        "# Calculamos la exactitud\n",
+        "print(f\"exactitud: {accuracy_score(y_test, adtr_pred)*100:.3f}\")\n",
         "\n",
         "# Realizamos el reporte de clasificacion\n",
         "print(classification_report(y_test, adtr_pred))"
       ],
-      "execution_count": 33,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Precisión: 99.36683165997844\n",
+            "exactitud: 99.367\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "           0       1.00      1.00      1.00     17794\n",
@@ -1611,7 +1613,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BPbtKZBFPMLF",
-        "outputId": "6f4c7daa-4519-48ea-95b6-5092a97e1032"
+        "outputId": "f8a3962d-2ced-49e5-aeea-8c04d17d925c"
       },
       "source": [
         "# Matriz de confusión\n",
@@ -1625,19 +1627,19 @@
         "from sklearn.metrics import recall_score\n",
         "\n",
         "print(f\"Precisión PPV: {precision_score(y_test, ann_pred, average=None)*100}\")\n",
-        "print(f\"Exactitud ACC: {accuracy_score(y_test, ann_pred)*100}\")\n",
+        "print(f\"Exactitud ACC: {accuracy_score(y_test, ann_pred)*100:.3f}\")\n",
         "print(f\"Sensibilidad TPR: {recall_score(y_test, ann_pred, average=None)*100}\")\n",
         "\n",
         "# Realizamos el reporte de clasificación\n",
         "print(classification_report(y_test, ann_pred))"
       ],
-      "execution_count": 36,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Precisión PPV: [99.99434869 99.82431978 99.80023797 99.25834363 99.94909214]\n",
-            "Exactitud ACC: 99.84971035085802\n",
+            "Exactitud ACC: 99.850\n",
             "Sensibilidad TPR: [ 99.43801281  99.90557642 100.          98.40686275  99.6765823 ]\n",
             "              precision    recall  f1-score   support\n",
             "\n",
@@ -1757,27 +1759,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IOgKD3eVjjaP",
-        "outputId": "002c2b23-b09b-4951-eff4-ccc8f89a8446",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IOgKD3eVjjaP",
+        "outputId": "f3ea24ce-eb86-4be7-c03f-5eb2d8bffdf2"
       },
       "source": [
         "print(f\"Precisión PPV: {precision_score(y_test, prediccion, average=None)*100}\")\n",
-        "print(f\"Exactitud ACC: {accuracy_score(y_test, prediccion)*100}\")\n",
+        "print(f\"Exactitud ACC: {accuracy_score(y_test, prediccion)*100:.3f}\")\n",
         "print(f\"Sensibilidad TPR: {recall_score(y_test, prediccion, average=None)*100}\")\n",
         "\n",
         "# Realizamos el reporte de clasificación\n",
         "print(classification_report(y_test, prediccion))"
       ],
-      "execution_count": 40,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Precisión PPV: [99.96622953 99.95766208 99.925666   99.50950337 99.93606499]\n",
-            "Exactitud ACC: 99.93949377761815\n",
+            "Exactitud ACC: 99.939\n",
             "Sensibilidad TPR: [99.81454423 99.93379496 99.98359329 99.44852941 99.93042759]\n",
             "              precision    recall  f1-score   support\n",
             "\n",
@@ -1885,27 +1887,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QMu6dKmfjv_Q",
-        "outputId": "64f77596-a8a3-46b0-fd67-e94cbc0351c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QMu6dKmfjv_Q",
+        "outputId": "9111436a-10f4-4fa6-e5fb-91d948388e50"
       },
       "source": [
         "print(f\"Precisión PPV: {precision_score(y_test, naiv_pred, average=None)*100}\")\n",
-        "print(f\"Exactitud ACC: {accuracy_score(y_test, naiv_pred)*100}\")\n",
+        "print(f\"Exactitud ACC: {accuracy_score(y_test, naiv_pred)*100:.3f}\")\n",
         "print(f\"Sensibilidad TPR: {recall_score(y_test, naiv_pred, average=None)*100}\")\n",
         "\n",
         "# Realizamos el reporte de clasificación\n",
         "print(classification_report(y_test, naiv_pred))"
       ],
-      "execution_count": 43,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Precisión PPV: [99.98203162 97.68901665 96.72111614 54.6184739  94.21412631]\n",
-            "Exactitud ACC: 96.23963586965007\n",
+            "Exactitud ACC: 96.240\n",
             "Sensibilidad TPR: [ 93.81252107  94.41815538  97.66477807 100.          97.64205934]\n",
             "              precision    recall  f1-score   support\n",
             "\n",
@@ -1971,7 +1973,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7KTnd8_2Z2wA"
+        "id": "ciJYV_fCyNNr"
       },
       "source": [
         ""
